--- a/xiaowei/02/test02.css
+++ b/xiaowei/02/test02.css
@@ -42,6 +42,8 @@ p{
 	border: 1px solid #ccc;
 	text-align: center;
 	padding: 1em;
+	overflow: auto;
+	zoom: 1;
 }
 .picture figure > figcaption{
 	margin-bottom: 1em;
@@ -89,4 +91,7 @@ p{
 	display: flex;
 	align-items: center;
 	justify-content: center;
+}
+.span-comment{
+	color: gray;
 }
